<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonRapidMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rapid_mode_off" />

        <LinearLayout
            android:id="@+id/colorPalette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" />

        <ImageButton
            android:id="@+id/buttonColorPicker"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/rainbow_dot"
            android:contentDescription="@string/color_picker"
            android:foreground="?attr/selectableItemBackgroundBorderless" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/buttonMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/actions_menu"
            android:src="@drawable/hamburger_black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.boox.einkdraw.VerticalSeekBar
                android:id="@+id/sliderBrushSize"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/brush_size"
                android:max="100"
                android:progress="40" />

            <com.boox.einkdraw.VerticalSeekBar
                android:id="@+id/sliderBrushOpacity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/brush_opacity"
                android:max="100"
                android:progress="100" />
        </LinearLayout>

        <com.boox.einkdraw.DrawingView
            android:id="@+id/drawingView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
